--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -12,6 +12,8 @@ $radius: 5px;
 $base-size: 12px;
 $transition: all 0.5s;
 
+$base-size: 12px;
+
 @mixin p-el($element) {
   &:#{$element}, &::#{$element} {
     position: absolute;
