--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,5 +20,9 @@ a, a:hover, a:visited {
   text-decoration: none;
 }
 
+h2 {
+  text-transform: uppercase;
+  text-align: center;
+}
 
-@import "./typography.scss";
+
